app/static/master.css
/* ... */
.mobilebg-bottom {margin-top: 5px !important;}
.mobile-dropdown div ul {
	margin: 0;
	list-style: none;
	line-height: 36px !important;
	transition: none;
	width: 100%;
}
.mobile-dropdown input[type=checkbox]:checked ~ div section {
	height: auto;
	max-height: 280px;
	transition: all 1s cubic-bezier(.5, 1, .22, 1);
}
.mobile-dropdown hr {
	background-color: var(--color-mobile-dropdown-hr);
	color: var(--color-mobile-dropdown-hr);
	margin-left: 13px;
	margin-right: 13px;
	margin-top: 0px;
	margin-bottom: 0px;
	height: 1px;
}
.drop-profile {
	background-size: 57px 57px;
	border-radius: 50%;
	float: right;
	width: 57px !important;
	height: 57px;
	margin-top: -64px;
	margin-bottom: 12px;
	margin-right: 13px;
}
/* MOBILE HAMBURGER */
.mobile-dropdown .hamburger {
	display: none;
	position: absolute;
	top: 14px;
	left: 13px;
	height: 27px;
	width: 27px;
	cursor: pointer;
	transition: all 1s cubic-bezier(.19, 1, .22, 1);
}
.mobile-dropdown .hamburger .line {
	background: var(--color-hamburger-line);
	position: absolute;
	display: block;
	width: var(--width-hamburger-line);
	height: var(--height-hamburger-line);
	border-radius: .2rem;
	left: 0;
	transition: all .6s cubic-bezier(.5, .1, 0, 1.2);
}
.mobile-dropdown .hamburger .line-1 {top: 0;}
.mobile-dropdown .hamburger .line-2 {
	top: var(--top-hamburger-line2);
	transform: translateX(0px);
}
.mobile-dropdown .hamburger .line-3 {top: var(--top-hamburger-line3);} 
.mobile-dropdown input[type=checkbox]:checked ~ label .line-1 {
	top: 0px;
	width: var(--width-line-checked);
	transform: translateX(-11px) rotate(-45deg) translateY(12px);
}
.mobile-dropdown input[type=checkbox]:checked ~ label .line-2 {
	opacity: 0;
}
.mobile-dropdown input[type=checkbox]:checked ~ label .line-3 {
	top: 14px;
	width: var(--width-line-checked);
	transform: translateX(-8px) rotate(45deg) translateY(-8px);
}

/* MOBILE FOOTER */
footer {display: none;}
.mobile-tab-bar {
	border: 1px solid var(--color-navbar-border-bottom);
    position: fixed;
    left: 16px;
    right: 16px;
    bottom: 16px;
    z-index: 20;
    background: var(--color-footer);
    backdrop-filter: blur(6px) saturate(140%) contrast(0.9) brightness(1.05);
	-webkit-backdrop-filter: blur(6px) saturate(140%) contrast(0.9) brightness(1.05);
    color: var(--color-navbar-font);
    border-radius: 32px;
    padding: 5px;
    display: grid;
    gap: 0;
    height: 54px;
	box-shadow: 0 0 10px 0 var(--color-body-bg);
}
.mobile-tab-bar-3 {
	grid-template-columns: repeat(3, 1fr);
}
.mobile-tab-bar-4 {
	grid-template-columns: repeat(4, 1fr);
}
.mobile-tab-button {
    appearance: none;
    border: 0;
    background: transparent;
    color: inherit;
    border-radius: 27px;
    height: 54px;
    width: calc(100% + 10px);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 4px;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
    position: relative;
    margin-inline: -10px;
    padding-inline: 10px;
    z-index: 0;
}
.mobile-tab-button:first-child { margin-left: 0; }
.mobile-tab-button:last-child  { margin-right: 0; }
.mobile-tab-button > * { position: relative; z-index: 1; }
.mobile-tab-button.tab-active { z-index: 2; }
.mobile-tab-button:focus-visible {
    outline: 2px solid #2e2e2e;
    outline-offset: 2px;
}
.mobile-tab-button.tab-active {
    background: var(--color);
}
.tab-btn-icon img {
    width: 26px;
    height: 26px;
	padding-bottom: 4px;
    display: block;
    object-fit: contain;
}
.tab-btn-text {
    font-size: 10px;
    line-height: 1;
    letter-spacing: .2px;
}

/* NAVBAR RESPONSIVE */
@media screen and (max-width: 1300px) { 
	.navbarinner {width: 100%;}
	.navlogo {margin-left: 12px;}
	.navleft {
		width: calc(100% - 212px);
	}
}
@media screen and (max-width: 850px) { 
	.navleft-l {display: none;}
	.navleft-r {padding-left: 10px !important;}
	.linkfull {display: none;}
	.linkshort {display: inline;}
}
@media screen and (max-width: 700px) { 
    #navbar {height: var(--height-mobile-navbar); min-height: auto;}
	.navlogo {display: none; height: var(--height-mobile-navbar);}
	.navlogo h1 {font-size: 26px; line-height: 26px; padding-left: 40px; padding-top: 9px;}
	.mobile-title {display: inline-block;}
    .navbarinner { width: 100%;}
	.navnoauth {display: none;}
	.navleft {display: none;}
	.navright {height: var(--height-mobile-navbar); width: var(--height-mobile-navbar);}
	.navrighticon {
		background-size: calc(var(--height-mobile-navbar) - 12px) calc(var(--height-mobile-navbar) - 12px);
		height: calc(var(--height-mobile-navbar) - 12px);
		margin-left: 6px;
		margin-top: 6px;
		margin-bottom: 4px;
		width: calc(var(--height-mobile-navbar) - 12px);
	}
	.mobile-dropdown {display: none;} /* Disabled since Version 1.5 */
	.hamburger {display: none !important;} /* Disabled since Version 1.5 */
	footer{display: block;}
}
@media screen and (max-width: 400px) { 
	.navlogo h1 {padding-top: 10px;}
}

